# lottery-tui

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/lottery_tui/: lottery.py  tui.py  tui.tcss
