[project]
name = "lottery-tui"
version = "0.2.1"
description = "A terminal user interface for lottery games."
authors = [{ name = "onyx-and-iris", email = "code@onyxandiris.online" }]
dependencies = ["textual>=8.0.0"]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
lottery-tui = "lottery_tui.tui:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"
includes = ["src/**/*", "README.md", "LICENSE"]
